[package]
categories = ["api-bindings", "development-tools", "gui"]
description = "Rust wrapper for ATL thunk type."
edition = "2021"
keywords = ["atl", "thunk"]
license = "MIT"
name = "atl-thunk"
repository = "https://github.com/EFanZh/atl-thunk"
version = "0.2.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
] }
